--- a/Favorite Places/Info.plist
+++ b/Favorite Places/Info.plist
@@ -28,6 +28,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>For Location Accuracy</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>For Location Accuracy</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
